--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-cryptography>=39.0.0,<40.0.0
+cryptography>=40.0.2,<41.0
 docker>=6.0.1,<7.0.0
-intel-sgx-ra>=1.0.1,<1.1
+intel-sgx-ra==2.0a3
 pydantic>=1.10.2,<2.0.0
 requests>=2.28.1,<2.29.0
+toml>=0.10.2,<0.11.0
