--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,5 @@
 black>=23.1,<24.0
+build>=0.10.0,<0.11.0
 mypy>=0.991,<1.0
 numpydoc>=1.5.0,<1.6.0
 pylint>=2.15.9,<2.16.0
@@ -6,6 +7,8 @@ pycodestyle>=2.10.0,<2.11.0
 pydocstyle>=6.1.1,<6.2.0
 pytest>=7.2.0,<7.3.0
 setuptools>=65.6,<66.0
+twine>=4.0.2,<5.0.0
 types-requests>=2.28,<2.29
 types-setuptools>=65.6,<66.0
 types-toml>=0.10,<0.11
+wheel>=0.38.4,<0.39.0
